--- a/grids.html
+++ b/grids.html
@@ -65,7 +65,7 @@
 
     <div class="learn-more-button"> 
         <p>Read Up On How to Create Theses Grids here</p>
-        <button> Learn More </button>
+        <a href"https://github.com/dantakelly/Gridify">  <button> Learn More </button> </a>
     </div>
 
     <script src="./grids.js"></script>
